// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination links should respond to click event 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </button>
  </li>
  <li
    className="active"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      1
    </button>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      2
    </button>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <button
      onClick={[Function]}
    >
      3
    </button>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <button
      onClick={[Function]}
    >
      4
    </button>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <button
      onClick={[Function]}
    >
      5
    </button>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </button>
  </li>
</ul>
`;

exports[`Pagination next link should be diabled if current page is the last 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </button>
  </li>
  <li
    className="active"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      1
    </button>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      2
    </button>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <button
      onClick={[Function]}
    >
      3
    </button>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <button
      onClick={[Function]}
    >
      4
    </button>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <button
      onClick={[Function]}
    >
      5
    </button>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </button>
  </li>
</ul>
`;

exports[`Pagination next link should be diabled if current page is the last 2`] = `
<ul
  className="pagination"
>
  <li
    className="waves-effect"
    id="pagination__prev"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </button>
  </li>
  <li
    className="waves-effect"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      1
    </button>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      2
    </button>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <button
      onClick={[Function]}
    >
      3
    </button>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <button
      onClick={[Function]}
    >
      4
    </button>
  </li>
  <li
    className="active"
    key="5"
  >
    <button
      onClick={[Function]}
    >
      5
    </button>
  </li>
  <li
    className="disabled"
    id="pagination__next"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </button>
  </li>
</ul>
`;

exports[`Pagination previous link should not be disabled if currentpage is not page 1 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </button>
  </li>
  <li
    className="active"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      1
    </button>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      2
    </button>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <button
      onClick={[Function]}
    >
      3
    </button>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <button
      onClick={[Function]}
    >
      4
    </button>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <button
      onClick={[Function]}
    >
      5
    </button>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </button>
  </li>
</ul>
`;

exports[`Pagination previous link should not be disabled if currentpage is not page 1 2`] = `
<ul
  className="pagination"
>
  <li
    className="waves-effect"
    id="pagination__prev"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </button>
  </li>
  <li
    className="waves-effect"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      1
    </button>
  </li>
  <li
    className="active"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      2
    </button>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <button
      onClick={[Function]}
    >
      3
    </button>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <button
      onClick={[Function]}
    >
      4
    </button>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <button
      onClick={[Function]}
    >
      5
    </button>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </button>
  </li>
</ul>
`;

exports[`Pagination should render with right amount of elements 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </button>
  </li>
  <li
    className="active"
  >
    <button
      onClick={[Function]}
    >
      1
    </button>
  </li>
  <li
    className="waves-effect"
  >
    <button
      onClick={[Function]}
    >
      2
    </button>
  </li>
  <li
    className="waves-effect"
  >
    <button
      onClick={[Function]}
    >
      3
    </button>
  </li>
  <li
    className="waves-effect"
  >
    <button
      onClick={[Function]}
    >
      4
    </button>
  </li>
  <li
    className="waves-effect"
  >
    <button
      onClick={[Function]}
    >
      5
    </button>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </button>
  </li>
</ul>
`;
